--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,9 @@ a {
     url(../img/background/layer-10.png);
   background-repeat: no-repeat;
   width: 100%;
+  padding: 38px 30px 248px;
   padding-top: 38px;
-  padding-bottom: 258px;
+  padding-bottom: 248px;
 }
 .header__navigation {
   display: flex;
@@ -71,7 +72,8 @@ a {
   text-transform: capitalize;
 }
 
-.header__navigation-list-item-link:hover {
+.header__navigation-list-item-link:hover,
+.header__navigation-list-item-link:focus {
   color: rgb(255, 0, 0);
 }
 
@@ -114,12 +116,15 @@ a {
   text-transform: uppercase;
   text-align: center;
   text-transform: capitalize;
-  margin-bottom: 52px;
+  margin-bottom: 54px;
 }
 
 .header__button {
+  display: block;
+  margin: 0 auto;
   font-size: 16px;
   font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
   color: rgb(255, 255, 255);
   text-transform: uppercase;
   text-align: center;
@@ -130,4 +135,128 @@ a {
   width: 176px;
   height: 46px;
   background-color: transparent;
+}
+
+.services {
+  padding: 98px 0;
+}
+
+.services__title {
+  font-size: 20px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  color: rgb(85, 85, 85);
+  text-transform: uppercase;
+  line-height: 1.2;
+  text-align: center;
+}
+
+.services__title::after {
+  content: '';
+  display: block;
+  margin: 28px auto 26px;
+  background-color: rgb(85, 85, 85);
+  width: 50px;
+  height: 2px;
+  margin-bottom: 28px;
+}
+
+.services__subtitle {
+  font-size: 16px;
+  font-family: 'Roboto Slab', sans-serif;
+  font-weight: 400;
+  color: rgb(85, 85, 85);
+  line-height: 1.5;
+  text-align: center;
+  margin-bottom: 74px;
+}
+
+.services__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.services__list-item {
+  flex-basis: calc(100% / 3 - (30px * 2 / 3));
+}
+
+.services__list-item-title {
+  font-size: 14px;
+  font-weight: 400;
+  font-family: 'Montserrat', sans-serif;
+  color: rgb(85, 85, 85);
+  text-transform: uppercase;
+  line-height: 1.714;
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.services__list-item-title::before {
+  content: '';
+  display: block;
+  margin: 0 auto;
+  border-width: 2px;
+  border-color: rgb(221, 221, 221);
+  border-style: solid;
+  border-radius: 50%;
+  background-color: rgb(255, 255, 255);
+  width: 86px;
+  height: 86px;
+  margin-bottom: 26px;
+}
+
+.services__list-item-title:hover::before {
+  border-width: 2px;
+  border-color: rgb(221, 221, 221);
+  border-style: solid;
+  border-radius: 50%;
+  background-color: rgb(192, 48, 28);
+  width: 86px;
+  height: 86px;
+}
+
+.services__list-item-title_font::before {
+  background-image: url(../img/icons/fa-font.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.services__list-item-title_code::before {
+  background-image: url(../img/icons/fa-code.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.services__list-item-title_support::before {
+  background-image: url(../img/icons/fa-support.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.services__list-item-title_font:hover::before {
+  background-image: url(../img/icons/fa-font-white.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.services__list-item-title_code:hover::before {
+  background-image: url(../img/icons/fa-code-white.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.services__list-item-title_support:hover:before {
+  background-image: url(../img/icons/fa-support-white.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.services__list-item-subtitle {
+  font-size: 14px;
+  font-family: 'Roboto Slab', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  color: rgb(85, 85, 85);
+  line-height: 1.714;
+  text-align: center;
 }
